@@ -1,6 +1,10 @@
 Changes relative to tre-0.15:
   * Added ready-made project directories in example/ to make
     it easier to start projects.
+  * REMOVE-PROP is now REMOVE-PROPS and works on an arbitrarily
+    number of keys to remove.
+  * PROPERTY-VALUES: New function to return the values of the
+    keys PROPERTY-NAMES returns.
 
 Changes of tre-0.15 relative to tre-0.14:
   * MAP has been removed.  It has been the same as MAPCAR.
